[project]
name = "pyrenac"
version = "0.0.1"
authors = [
  { name="Gastush", email="gastush@gmail.com" },
]
description = "A library to fetch data from Renac Inverter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gastush/pyrenac"
Issues = "https://github.com/gastush/pyrenac/sampleproject/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

